--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,6 @@
     padding: 0;
 }
 
-/* I personally would never use body & html to use as a style. 
-Only reason i did it here is to put make footer stay at bottom. 
-I'll put the styling that put stuff to center into the specific folder for it. */
-
 html {
     height: 100%;
     box-sizing: border-box;
@@ -19,4 +15,6 @@ body {
     margin: 0;
     min-height: 100%;
     box-sizing: inherit;
+    overflow-y: scroll;
+
 }
